--- a/index.html
+++ b/index.html
@@ -47,18 +47,16 @@
 
       <select name="인원" id="people">
         <option value="혼밥">혼밥</option>
-        <option value="커플">커플</option>
-        <option value="남자둘">남자둘</option>
+        <option value="두명">2</option>
         <option value="3~4">3~4</option>
         <option value="5인 이상">5인 이상</option>
       </select>
 
       <select name="현위치" id="location">
-        <option value="후문">후문(신관)</option>
+        <option value="후문">후문+쪽문</option>
+        <option value="후문건너">후문건너+역</option>
         <option value="정문">정문</option>
-        <option value="쪽문">쪽문</option>
-        <option value="북문">북문</option>
-        <option value="성대역근처">성대역근처</option>
+        <option value="역너머">역너머</option>
       </select>
     </section>
 
@@ -87,6 +85,7 @@
       <li>...</li>
     </ul>
   </section>
+  <script src="foodDB.js"></script>
 </body>
 
 </html>
