--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </select>
 
       <select name="종류(면/밥)" id="variety">
-        <option value="면">면</option>
         <option value="밥">밥</option>
+        <option value="면">면</option>
       </select>
 
       <select name="가격" id="price">
@@ -46,10 +46,9 @@
       </select>
 
       <select name="인원" id="people">
-        <option value="혼밥">혼밥</option>
-        <option value="두명">2</option>
-        <option value="3~4">3~4</option>
-        <option value="5인 이상">5인 이상</option>
+        <option value="1">혼밥</option>
+        <option value="2">두명</option>
+        <option value="4">단체</option>
       </select>
 
       <select name="현위치" id="location">
