--- a/index.html
+++ b/index.html
@@ -28,27 +28,31 @@
         <option value="한식">한식</option>
         <option value="중식">중식</option>
         <option value="일식">일식</option>
-        <option value="분식">분식</option>
         <option value="제3국">제3국</option>
+        <option value="분식">분식</option>
+        <option value="인스턴트">인스턴트</option>
+        <option value="선택안함">선택안함</option>
+
       </select>
 
       <select name="종류(면/밥)" id="variety">
         <option value="밥">밥</option>
         <option value="면">면</option>
+        <option value="국">국</option>
+        <option value="선택안함">선택안함</option>
       </select>
 
       <select name="가격" id="price">
-        <option value="1">4000원 이하</option>
-        <option value="2">4000원~6000원</option>
-        <option value="2">6000원~8000원</option>
-        <option value="2">8000원~10000원</option>
-        <option value="2">FLEX를 하고 싶다!!</option>
+        <option value="1">평균가격 10000원 미만</option>
+        <option value="2">평균가격 10000원 이상</option>
+        <option value="선택안함">선택안함</option>
       </select>
 
       <select name="인원" id="people">
         <option value="1">혼밥</option>
         <option value="2">두명</option>
         <option value="4">단체</option>
+        <option value="선택안함">선택안함</option>
       </select>
 
       <select name="현위치" id="location">
@@ -56,6 +60,7 @@
         <option value="후문건너">후문건너+역</option>
         <option value="정문">정문</option>
         <option value="역너머">역너머</option>
+        <option value="선택안함">선택안함</option>
       </select>
     </section>
 
