--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <img id="background-image" src="KakaoTalk_Photo_2022-11-13-02-55-48.png" />
+  <img id="background-image" src="img/bg1.png" />
   <header>
     <h1>WELCOME!</h1>
   </header>
@@ -70,7 +70,8 @@
       </button>
     </section>
   </section>
-  <script src="foodDB.js"></script>
+
+  <script src="js/foodDB.js"></script>
 </body>
 
 </html>
