--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <img id="background-image" src="img/bg1.png" />
   <header>
-    <h1>WELCOME!</h1>
+    <h1>WELCOME TO 율전맛집 추천!</h1>
   </header>
 
   <section id="main">
