--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <option value="일식">일식</option>
         <option value="분식">분식</option>
         <option value="제3국">제3국</option>
+        <option value="인스턴트">인스턴트</option>
       </select>
 
       <select name="종류(면/밥)" id="variety">
         <option value="밥">밥</option>
         <option value="면">면</option>
+        <option value="기타">기타</option>
       </select>
 
       <select name="가격" id="price">
