--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
         <option value="중식">중식</option>
         <option value="일식">일식</option>
         <option value="제3국">제3국</option>
+        <option value="분식">분식</option>
+        <option value="인스턴트">인스턴트</option>
+        <option value="선택안함">선택안함</option>
+
       </select>
 
       <select name="종류(면/밥)" id="variety">
         <option value="밥">밥</option>
         <option value="면">면</option>
+        <option value="국">국</option>
+        <option value="선택안함">선택안함</option>
       </select>
 
       <select name="가격" id="price">
