--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <option value="1">혼밥</option>
         <option value="2">두명</option>
         <option value="4">단체</option>
-        <option value="선택안함">선택안함</option>
+        <option value="0">선택안함</option>
       </select>
 
       <select name="현위치" id="location">
-        <option value="후문">후문+쪽문</option>
+        <option value="후문+쪽문">후문+쪽문</option>
         <option value="후문건너">후문건너+역</option>
         <option value="정문">정문</option>
         <option value="역너머">역너머</option>
